2003-10-14  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regenerated
	* gtk/Gtk.metadata : begin the port of the Gtk rules
	* gtk/Makefile.in : apply metadata in gen target
	* gtkhtml/gtkhtml-api.xml : regenerated
	* gtkhtml/Gtk.metadata : a couple rules ported
	* gtkhtml/Makefile.in : apply metadata in gen target
	* sources/Gtk.metadata : port first 350 lines of rules.

2003-10-14  Mike Kestner  <mkestner@ximian.com>

	* gtk/gtk-api.xml : regenerated
	* sources/Gtk.metadata : removed all the obsolete "out" rules

2003-10-13  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : mark an array param on PixbufDestroyNotify
	* gdk/gdk-api.xml : regenerated
	* generator/CallbackGen.cs : Handle out params in callback sigs
	and ditch the object[] args handling for typed args.
	* generator/Parameters.cs : more proactive PassAs logic.  We now
	default all simple pointer types (uint*, int*, double*, etc...) 
	to out params unless they are marked otherwise in the XML with a
	pass_as tag or an array tag.  [Fixes #32104]

2003-10-13  Mike Kestner  <mkestner@ximian.com>

	* gnome/Gnome.metadata : new xpath metadata rules
	* gnome/Makefile.in : apply metadata before generation
	* gnome/gnome-api.xml : regenerated
	* parser/gapi-fixup.cs : use XmlDocument.Save (filename) 
	instead of opening a stream manually.
	* sources/Gnome.metadata : killed

2003-10-12  Mike Kestner  <mkestner@ximian.com>

	* art/Art.metadata : new xpath metadata rules
	* art/Makefile.in : apply metadata before generation
	* atk/Atk.metadata : new xpath metadata rules
	* atk/Makefile.in : apply metadata before generation
	* gda/Gda.metadata : new xpath metadata rules
	* gda/Makefile.in : apply metadata before generation
	* gdk/Gdk.metadata : new xpath metadata rules
	* gdk/Makefile.in : apply metadata before generation
	* gnomedb/GnomeDb.metadata : new xpath metadata rules
	* gnomedb/Makefile.in : apply metadata before generation
	* pango/Pango.metadata : new xpath metadata rules