@@ -1,4 +1,5 @@
 
+/*
 		public static Hashtable clipboard_objects = new Hashtable ();
 		private static uint clipboard_object_next_id = 0;
 
@@ -50,4 +51,5 @@
 
 			return ret;
 		}
+*/
 
