@@ -1,8 +1,0 @@
-// Generated File.  Do not modify.
-// <c> 2001-2002 Mike Kestner
-
-namespace Gtk {
-
-	public delegate void ClipboardGetFunc(Gtk.Clipboard clipboard, ref Gtk.SelectionData selection_data, uint info, object o);
-
-}
