@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
+  <attr path="//callback[@cname='GtkClipboardGetFunc']/*/*[@type='GtkSelectionData*']" name="pass_as">ref</attr>
   <attr path="//interface[@cname='GtkEditable']/method[@name='InsertText']/*/*[@name='position']" name="pass_as">ref</attr>
   <attr path="//interface[@cname='GtkTreeModel']/method[@name='GetIter']/*/*[@name='iter']" name="pass_as">out</attr>
   <attr path="//interface[@cname='GtkTreeModel']/method[@name='GetIterFirst']/*/*[@name='iter']" name="pass_as">out</attr>
