@@ -533,18 +533,18 @@
         <parameter type="GtkArg*" name="args" />
       </parameters>
     </callback>
-    <callback name="ClipboardClearFunc" cname="GtkClipboardClearFunc" hidden="1">
+    <callback name="ClipboardClearFunc" cname="GtkClipboardClearFunc">
       <return-type type="void" />
       <parameters>
         <parameter type="GtkClipboard*" name="clipboard" />
         <parameter type="gpointer" name="user_data_or_owner" />
       </parameters>
     </callback>
-    <callback name="ClipboardGetFunc" cname="GtkClipboardGetFunc" hidden="1">
+    <callback name="ClipboardGetFunc" cname="GtkClipboardGetFunc">
       <return-type type="void" />
       <parameters>
         <parameter type="GtkClipboard*" name="clipboard" />
-        <parameter type="GtkSelectionData*" name="selection_data" />
+        <parameter type="GtkSelectionData*" name="selection_data" pass_as="ref" />
         <parameter type="guint" name="info" />
         <parameter type="gpointer" name="user_data_or_owner" />
       </parameters>
