@@ -1,5 +1,17 @@
 2003-10-14  Mike Kestner  <mkestner@ximian.com>
 
+	* gtk/Gtk.metadata : rule for ClipboardGetFunc
+	* gtk/Clipboard.custom : comment out for now don't think any
+	of this is needed.
+	* gtk/ClipboardClearFunc.cs : gen'd now
+	* gtk/ClipboardGetFunc.cs : gen'd now
+	* gtk/GtkSharp.GtkClipboardClearFuncNative.cs : gen'd now
+	* gtk/GtkSharp.GtkClipboardGetFuncNative.cs : gen'd now
+	* gtk/gtk-api.xml : regenerated
+	* sources/Gtk.metadata : remove a couple clipboard hides
+	
+2003-10-14  Mike Kestner  <mkestner@ximian.com>
+
 	* gtk/gtk-api.xml : regenerated
 	* gtk/Gtk.metadata : begin the port of the Gtk rules
 	* gtk/Makefile.in : apply metadata in gen target
